sql-check/tests/compile_fail/mysql/nonexistent_table.stderr
error: SQL validation failed: error returned from database: 1146 (42S02): Table 'sqlcheck.this_table_does_not_exist_anywhere' doesn't exist
 --> tests/compile_fail/mysql/nonexistent_table.rs:4:16
  |
4 |     let _sql = check!("SELECT * FROM this_table_does_not_exist_anywhere");
  |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `$crate::check_impl` which comes from the expansion of the macro `check` (in Nightly builds, run with -Z macro-backtrace for more info)
